@@ -10,13 +10,13 @@ set pid_file "/var/run/l2tpns.pid"
 # Shared secret with LAC
 set l2tp_secret "secret"
 
+# MTU of interface for L2TP traffic
+#set l2tp_mtu 1500
+
 # PPP counter and timer values
 #set ppp_restart_time 3
 #set ppp_max_configure 10
 #set ppp_max_failure 5
-
-# Link MRU
-#set ppp_mru 1452
 
 # Only 2 DNS server entries are allowed
 set primary_dns 10.0.0.1
